# Axiom

./: .env.example  .gitignore  CLI_REFERENCE.md  Cargo.toml  DOCUMENTATION.md  README.md  requirements.txt  spec.fst
src/: config.rs  errors.rs  lib.rs  main.rs  main.rs.bak
src/cli/: mod.rs  ui.rs
src/cli/commands/: mod.rs  process.rs  spec.rs  validate.rs
src/implementations/: config.rs  mod.rs  specification_generator.rs
src/models/: artifact.rs  common.rs  implementation.rs  mod.rs  property.rs  specification.rs  verification.rs
src/tests/: mod.rs  specification_generator_tests.rs
src/traits/: axiom_system.rs  implementation_generator.rs  language_adapter.rs  mod.rs  specification_generator.rs  verification_engine.rs
