[package]
name = "axiom"
version = "0.1.0"
edition = "2021"
authors = ["Axiom Team"]
description = "A system that formally verifies AI-generated code"
license = "MIT"
repository = "https://github.com/yourusername/axiom"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
textwrap = "0.16"
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
